--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <h2>🐍 我做过的事必会主动承认，我没做过的事绝不会承认。</>
 
             <h2>📖 2025年4月2日</h2>
-            <p>✨ 正文...</p>
+            <p>✨ 我们班有个叫傅天明的人，在2024年高一上学校从9月</p>
 
         </div>
 
