--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
         <h2>🐍 我做过的事必会主动承认，我没做过的事绝不会承认。</>
 
             <h2>📖 2025年4月2日</h2>
-            <p>✨ 我们班有个叫傅天明的人，在2024年高一上学校从9月</p>
-
+            <p>✨ 我们班有个叫傅天明的人，他在我的班里名声很不太好，跟社会游手好闲的混子一样。真实事件 在2024年8.21 8.24 9.8 9.9 9.12 9.14 9.18 9.22 9.23的时候，有仨名同学未经我本人允许，私自乱翻我本人的柜子和床上的东西，其中有一位同学偷走占有了我的东西:趣味花生*5 鸡腿*2 价值35人民币，实则只有傅天明一人，他把文某某和杨某某拉入了他的犯事之中，让我误会了文某某和杨某某。</p>
+<p>现在不是说这些的时候，
         </div>
 
         <div class="magic-portal">
