--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <h2>📖 2025年4月2日</h2>
             <p>✨ 我们班有个叫傅天明的人，他在我的班里名声很不太好，跟社会游手好闲的混子一样。真实事件 在2024年8.21 8.24 9.8 9.9 9.12 9.14 9.18 9.22 9.23的时候，有仨名同学未经我本人允许，私自乱翻我本人的柜子和床上的东西，其中有一位同学偷走占有了我的东西:趣味花生*5 鸡腿*2 价值35人民币，实则只有傅天明一人，他把文某某和杨某某拉入了他的犯事之中，让我误会了文某某和杨某某。</p>
 <p>现在不是说这些的时候，傅天明这个人没有必要跟他有任何关系，他要什么都不要给，他跟犹太人一样，例如有一个犹太人快要饿死了，你给他你一半个面包，他会第一时间感谢上帝，第二时间怎么把你杀了夺走你另一半的面包。</p>
-<p>他从2024年10月9日至学期完都在用我的热水卡，我是12月底才发的他一直偷拿我的热水卡洗澡，一共用了63￥（实际是69.7551￥），我在2025年3月12日
+<p>他从2024年10月9日至学期完都在用我的热水卡，我是12月底才发的他一直偷拿我的热水卡洗澡，一共用了63￥（实际是69.7551￥），我在2025年3月19日找傅天明他因上个学期用了我热水卡中六十三块钱（实际为69.7551￥)，出于要陪三年的高中同学的原因，我只要求他还三十八块钱，他上个学期（时间在2024年12月27日)也口头上同意。一直催他加QQ或微信好友或者扫码转账38￥，一直拖到这个学期的今天（至今)，并同时今天（2025年3月19日)我问他什么时候还热水卡的38￥，他说过几天还，然后此话过了不到五分钟左右之后一直转移话题，过了十几分钟（到寝室熄灯)并直接否认了没有这件事，并对我大吼大叫道“你有证据什么的吗？我知道我用了你傻逼热水卡，我凭什么还你？”我听后直接一气之下打110，立案了。之前差点把我手表偷了，还好我在多疑心的人才没有上他的当，时间在十月份末，我于2025年3月19日晚上二十三点
         </div>
 
         <div class="magic-portal">
