--- a/index.html
+++ b/index.html
@@ -1,214 +1,1 @@
-<html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="祖帝的可爱日记本，记录日常点滴与冒险故事">
-    <meta name="keywords" content="日记, 祖帝, 可爱, 冒险">
-    <!-- 字体预加载优化 -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&family=Short+Stack&display=swap" rel="stylesheet">
-    <!-- Font Awesome 优化 -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <title>天门行知中等职业技术学校の那些事</title>
-    <style>
-        /* CSS变量管理 */
-        :root {
-            --primary-color: #ffb6c1;
-            --secondary-color: #87cefa;
-            --font-title: 'Comic Neue', cursive;
-            --font-content: 'Short Stack', cursive;
-            --portal-glow: radial-gradient(circle, rgba(255,230,240,0.8) 0%, rgba(255,255,255,0) 70%);
-            --transition-time: 0.3s;
-        }
-
-        /* 基础样式 */
-        body {
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-            background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
-            min-height: 100vh;
-            padding: 20px;
-            line-height: 1.6;
-            position: relative;
-            font-family: var(--font-content);
-        }
-
-        /* 容器动画 */
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background: rgba(255, 255, 255, 0.9);
-            padding: 30px;
-            border-radius: 20px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-            border: 3px dashed #fff;
-            opacity: 0;
-            animation: fadeIn 0.5s ease-out forwards;
-            will-change: transform, opacity;
-        }
-
-        /* 标题样式 */
-        h1 {
-            font-family: var(--font-title);
-            color: #ff69b4;
-            text-align: center;
-            font-size: clamp(2rem, 5vw, 2.5rem);
-            margin-bottom: 20px;
-            text-shadow: 2px 2px 0 #fff;
-        }
-
-        /* 日记内容区域 */
-        .diary-content {
-            font-size: 1.2em;
-            color: #666;
-            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="10" height="10"><text x="0" y="50" font-size="30" fill="%23ffd700">🐾</text></svg>');
-            padding: 20px;
-            border-radius: 15px;
-            margin-bottom: 25px;
-        }
-
-        /* 魔法传送门样式 */
-        .magic-portal {
-            position: relative;
-            margin: 30px auto;
-            max-width: 300px;
-            perspective: 1000px;
-        }
-
-        .portal-button {
-            display: block;
-            padding: 15px 30px;
-            background: #ff99cc;
-            border-radius: 50px;
-            text-align: center;
-            font-family: var(--font-title);
-            color: white;
-            text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
-            box-shadow: 0 4px 15px rgba(255, 105, 180, 0.3);
-            transition: all var(--transition-time);
-            position: relative;
-            z-index: 2;
-            border: 2px solid white;
-            text-decoration: none;
-            -webkit-tap-highlight-color: transparent;
-            touch-action: manipulation;
-        }
-
-        /* 动画效果 */
-        @keyframes fadeIn {
-            to { opacity: 1; transform: translateY(0); }
-            from { opacity: 0; transform: translateY(20px); }
-        }
-
-        @keyframes glow {
-            0%, 100% { opacity: 0.6; }
-            50% { opacity: 0.9; }
-        }
-
-        @keyframes float {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-20px); }
-        }
-
-        /* 响应式设计 */
-        @media (max-width: 768px) {
-            .container {
-                width: 95%;
-                padding: 15px;
-            }
-            .diary-content {
-                font-size: 1em;
-            }
-            .portal-button {
-                padding: 12px 25px;
-                font-size: 0.9em;
-            }
-        }
-
-        @media (prefers-reduced-motion: reduce) {
-            * {
-                animation: none !important;
-                transition: none !important;
-            }
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>天门行知中等职业技术学校の那些事<i class="fas fa-heart"></i></h1>
-
-        <div class="diary-content">      
-
-        <h2>🐍 我做过的事必会主动承认，我没做过的事绝不会承认。</>
-
-            <h2>📖 2025年4月2日</h2>
-            <p>✨ 我们班有个叫傅天明的人，他在我的班里名声很不太好，跟社会游手好闲的混子一样。真实事件 在2024年8.21 8.24 9.8 9.9 9.12 9.14 9.18 9.22 9.23的时候，有仨名同学未经我本人允许，私自乱翻我本人的柜子和床上的东西，其中有一位同学偷走占有了我的东西:趣味花生*5 鸡腿*2 价值35人民币，实则只有傅天明一人，他把文某某和杨某某拉入了他的犯事之中，让我误会了文某某和杨某某。</p>
-<p>现在不是说这些的时候，傅天明这个人没有必要跟他有任何关系，他要什么都不要给，他跟犹太人一样，例如有一个犹太人快要饿死了，你给他你一半个面包，他会第一时间感谢上帝，第二时间怎么把你杀了夺走你另一半的面包。</p>
-<p>他从2024年10月9日至学期完都在用我的热水卡，我是12月底才发的他一直偷拿我的热水卡洗澡，一共用了63￥（实际是69.7551￥），我在2025年3月19日找傅天明他因上个学期用了我热水卡中六十三块钱（实际为69.7551￥)，出于要陪三年的高中同学的原因，我只要求他还三十八块钱，他上个学期（时间在2024年12月27日)也口头上同意。一直催他加QQ或微信好友或者扫码转账38￥，一直拖到这个学期的今天（至今)，并同时今天（2025年3月19日)我问他什么时候还热水卡的38￥，他说过几天还，然后此话过了不到五分钟左右之后一直转移话题，过了十几分钟（到寝室熄灯)并直接否认了没有这件事，并对我大吼大叫道“你有证据什么的吗？我知道我用了你傻逼热水卡，我凭什么还你？”我听后直接一气之下打110，立案了。之前差点把我手表偷了，还好我在多疑心的人才没有上他的当，时间在十月份末，我于2025年3月19日晚上二十三点十一点找了现任班主任说明了情况，在2025年3月19日晚上二十三点二十五找了父亲也说明了情况。我已经过自己的父亲思想教育，我已撤诉，。。但是若傅天明有下次(骂人，烦我，乱翻并拿我东西)的话，我也只能不客气了【先礼后兵】。望各位配合了，本人第一不喜欢开玩笑，第二不喜欢有人乱翻偷拿我的东西，第三本人会承认自己做的事，不会承认自己没有做过的事。十块钱是可以立案的，说人话就是任何金额都可以立案。（这说人话是对傅天明说的）。 在2025年3月31日我们的寝室长辉丞相与我对话（内容：为什么你无法融入我们的圈子？我的回答是我不想融入任何圈子，因为融入了是一种负担)此时傅天明主动找事骂我的父母什么的，还涉及了从他大脑知识库的黄腔对我狂叫，还脱裤子炫耀自己多么长多么精。。。实在是无法形容，我直接说”啊对对对，你得加油”然后他一直骂我，还下床拉我的床，用脚踹了我床三脚，此刻我立马坐了起来，他指的我的鼻子像白眠狼一样得了狂犬病地骂。此时寝室长出来阻止了对峙局面，因为如果他直接打了我的话，我会奉行我父亲的命令该出手的时候就出手，只要不打死即可。我早已经闭上嘴，十几分钟还在那骂，还说我惹到他什么的，只要我不惹他就不惹我什么的。。。我只想说“若不是你只骂我不疼不痒，压根就不会出手。若你先出手打我了，我肯定把你打得半死。”</p>
-<p>个人结论：傅天明这种白眼狼，没有任何必要给他任何东西和情感，说直白点就是不值得同情，任由其自生自灭，也不要给他任何东西。因为他可是游手好闲天天抽烟的混子，也可以说是得了狂犬病的疯狗，见谁咬谁，还会背刺咬主人。</p>
-        </div>
-
-        <div class="magic-portal">
-            <a href="https://6.WenTianPlay.com" class="portal-button">
-                <span class="sparkle">⭐</span>
-                下一页の探险之旅
-                     <span class="sparkle">✨</span>
-            </a>
-            <div class="portal-glow"></div>
-        </div>
-
-        <div class="copyright">
-            © 2024 祖帝日记<br>
-            本网站与<a href="https://WenTianPlay.com">文天玩WenTianPlay</a>无任何所属关系<br>
-            文天玩仅提供二级域名分发
-        </div>
-    </div>
-
-    <div class="decorative" style="top:10%;left:5%">🍭</div>
-    <div class="decorative" style="top:30%;right:8%">🎀</div>
-    <div class="decorative" style="top:70%;left:15%">🐾</div>
-
-    <script>
-        // 安全保护与功能优化
-        (function() {
-            'use strict';
-
-            // 安全事件处理器
-            const securityHandler = (e) => {
-                const forbiddenKeys = new Set(['F12', 'I', 'U', 'c', 'C']);
-                const isDevToolsShortcut = (e.ctrlKey && e.shiftKey && forbiddenKeys.has(e.key)) ||
-                                         (e.ctrlKey && forbiddenKeys.has(e.key)) ||
-                                         e.key === 'F12';
-
-                if (isDevToolsShortcut) {
-                    e.preventDefault();
-                    return false;
-                }
-            };
-
-            // 事件监听器注册
-            const addEvent = (type, handler) => {
-                document.addEventListener(type, handler, { passive: false });
-            };
-
-            // 初始化安全保护
-            addEvent('keydown', securityHandler);
-            addEvent('contextmenu', (e) => e.preventDefault());
-            addEvent('copy', (e) => e.preventDefault());
-            addEvent('cut', (e) => e.preventDefault());
-
-            // 渐进增强功能
-            try {
-                if ('serviceWorker' in navigator) {
-                    navigator.serviceWorker.register('/sw.js');
-                }
-            } catch (error) {
-                console.log('Service Worker 注册失败:', error);
-            }
-        })();
-    </script>
-</body>
-</html>
+己禁止
